--- a/Task-10_Browser_Game/Snake/src/index.html
+++ b/Task-10_Browser_Game/Snake/src/index.html
@@ -6,7 +6,10 @@
 </head>
 
 <body>
-  <canvas width="800" height="800" id="game"></canvas>
+<img id="food" src="images/content/food.png">
+<img id="snake" src="images/content/snake.png">
+<img id="ground" src="images/content/ground.png">
+<canvas id="game" width="608" height="608"></canvas>
 </body>
 
 </html>
