added score counter

--- a/Task-10_Browser_Game/Snake/src/index.html
+++ b/Task-10_Browser_Game/Snake/src/index.html
@@ -6,10 +6,12 @@
 </head>
 
 <body>
+  <p class="aside__score">Your score: <span id="score"></span></p>
+  <p class="aside__max-score">Record: <span id="max-score"></span></p>
 <img id="food" src="images/content/food.png">
 <img id="snake" src="images/content/snake.png">
 <img id="ground" src="images/content/ground.png">
-<canvas id="game" width="608" height="608"></canvas>
+  <canvas width="608" height="608" id="game"></canvas>
 </body>
 
 </html>
